--- a/packages/creative-coding-toy/package.json
+++ b/packages/creative-coding-toy/package.json
@@ -41,7 +41,7 @@
 			"types": "./types/index.d.ts"
 		},
 		"./vite": {
-			"import": "./src/exports/vite/index.js"
+			"import": "./src/vite/index.js"
 		}
 	},
 	"types": "types/index.d.ts",
