--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,21 +12,22 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.3",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tweakpane/core": "^1.1.6",
 		"@types/polka": "^0.5.4",
-		"eslint": "^8.37.0",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"open-props": "^1.5.7",
-		"prettier": "^2.8.7",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tweakpane": "^3.1.7",
 		"typescript": "^5.0.3",
-		"vite": "^4.2.1"
+		"vite": "^5.0.0"
 	},
 	"files": [
 		"build",
