--- a/packages/creative-coding-toy/package.json
+++ b/packages/creative-coding-toy/package.json
@@ -12,7 +12,6 @@
 	"devDependencies": {
 		"@playwright/test": "1.33.0",
 		"@rollup/pluginutils": "^5.1.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/connect": "^3.4.35",
 		"@types/node": "^18.19.3",
 		"@types/three": "^0.150.1",
@@ -27,10 +26,14 @@
 	},
 	"peerDependencies": {
 		"p5": "^1.6.0",
+		"svelte": "^4.2.8",
 		"three": "^0.151.3"
 	},
 	"peerDependenciesMeta": {
 		"p5": {
+			"optional": true
+		},
+		"svelte": {
 			"optional": true
 		},
 		"three": {
